--- a/ms-address/src/main/resources/application.properties
+++ b/ms-address/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/university
+spring.datasource.username=root
+spring.datasource.password=123456
 
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.application.name=university
+
+server.port=8081
